--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
-<div class="w-full h-screen flex  justify-center items-center" style="background-image: url('./images/bg-pattern-bottom.svg')">
-  <div class="max-w-md mx-auto bg-white rounded-md overflow-hidden shadow-lg">
+<div class="w-full h-screen flex  justify-center items-center font-sans" style="background-image: url('./images/bg-pattern-bottom.svg')">
+  <div class="max-w-md mx-auto bg-white rounded-md overflow-hidden shadow-lg mx-4">
     <img class="w-full h-56 object-cover " src="./images/bg-pattern-card.svg" alt="Portfolio Image">
     <div class="flex items-center justify-center">
       <div class="flex items-center top-0">
@@ -20,22 +21,22 @@
     <div class="px-4 py-4">
       <div class="flex flex-col items-center justify-center text-center mb-4">
         <div>
-          <h2 class="font-bold text-lg sm:text-xl">Victor Crest <span class="text-gray-600">26</span></h2>
-          <p class="text-gray-600">London</p>
+          <h2 class="font-kumbh-sans text-lg sm:text-xl">Victor Crest <span class="font-kumbh-sans text-gray-600">26</span></h2>
+          <p class="font-kumbh-sans text-gray-600">London</p>
         </div>
       </div>
       <div class="flex flex-col sm:flex-row items-center justify-between mb-4">
         <div class="text-center mb-2 sm:mb-0">
           <h3 class="font-bold text-lg sm:text-xl">80K</h3>
-          <p class="text-gray-600">Followers</p>
+          <p class=" font-kumbh-sans text-gray-600">Followers</p>
         </div>
         <div class="text-center mb-2 sm:mb-0">
           <h3 class="font-bold text-lg sm:text-xl">803K</h3>
-          <p class="text-gray-600">Likes</p>
+          <p class=" font-kumbh-sans text-gray-600">Likes</p>
         </div>
         <div class="text-center">
           <h3 class="font-bold text-lg sm:text-xl">1.4K</h3>
-          <p class="text-gray-600">Photos</p>
+          <p class=" font-kumbh-sans text-gray-600">Photos</p>
         </div>
       </div>
     </div>
