--- a/index.html
+++ b/index.html
@@ -6,41 +6,41 @@
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
-<div class="w-full h-screen flex  justify-center items-center font-sans" style="background-image: url('./images/bg-pattern-bottom.svg')">
-  <div class="max-w-md mx-auto bg-white rounded-md overflow-hidden shadow-lg mx-4">
-    <img class="w-full h-56 object-cover " src="./images/bg-pattern-card.svg" alt="Portfolio Image">
-    <div class="flex items-center justify-center">
-      <div class="flex items-center top-0">
-        <img src="./images/image-victor.jpg" alt="Victor Crest" class=" border-4 border-white sm:border-8 rounded-full w-24 h-24 sm:w-32 sm:h-32 mt-[-3rem] sm:mt-[-4rem]">
-      </div>
-    </div>
-    <div class="px-4 py-4">
-      <div class="flex flex-col items-center justify-center text-center mb-4">
-        <div>
-          <h2 class="font-kumbh-sans text-lg sm:text-xl">Victor Crest <span class="font-kumbh-sans text-gray-600">26</span></h2>
-          <p class="font-kumbh-sans text-gray-600">London</p>
+  <div class="w-full h-screen flex justify-center items-center font-sans" style="background-image: url('./images/bg-pattern-bottom.svg')">
+    <div class="max-w-md bg-white rounded-md overflow-hidden shadow-lg mx-8 ">
+      <img class="w-full h-56 object-cover " src="./images/bg-pattern-card.svg" alt="Portfolio Image">
+      <div class="flex items-center justify-center">
+        <div class="flex items-center top-0">
+          <img src="./images/image-victor.jpg" alt="Victor Crest" class=" border-8 border-white  rounded-full w-32 h-32   mt-[-4rem]">
         </div>
       </div>
-      <div class="flex flex-col sm:flex-row items-center justify-between mb-4">
-        <div class="text-center mb-2 sm:mb-0">
-          <h3 class="font-bold text-lg sm:text-xl">80K</h3>
-          <p class=" font-kumbh-sans text-gray-600">Followers</p>
+      <div class="px-4 py-4 divide-y">
+        <div class="flex flex-col items-center justify-center text-center mb-4 ">
+          <div>
+            <h2 class="font-kumbh-sans text-lg sm:text-xl">Victor Crest <span class="font-kumbh-sans text-gray-600">26</span></h2>
+            <p class="font-kumbh-sans text-gray-600">London</p>
+          </div>
         </div>
-        <div class="text-center mb-2 sm:mb-0">
-          <h3 class="font-bold text-lg sm:text-xl">803K</h3>
-          <p class=" font-kumbh-sans text-gray-600">Likes</p>
-        </div>
-        <div class="text-center">
-          <h3 class="font-bold text-lg sm:text-xl">1.4K</h3>
-          <p class=" font-kumbh-sans text-gray-600">Photos</p>
+        <div class="flex flex-row items-center justify-between mb-4">
+          <div class="text-center mb-2 sm:mb-0">
+            <h3 class="font-bold text-lg sm:text-xl">80K</h3>
+            <p class="font-kumbh-sans text-gray-600">Followers</p>
+          </div>
+          <div class="text-center mb-2 sm:mb-0">
+            <h3 class="font-bold text-lg sm:text-xl">803K</h3>
+            <p class="font-kumbh-sans text-gray-600">Likes</p>
+          </div>
+          <div class="text-center">
+            <h3 class="font-bold text-lg sm:text-xl">1.4K</h3>
+            <p class="font-kumbh-sans text-gray-600">Photos</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+  
 </body>
 </html>
