--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
-  <div class="w-full h-screen flex justify-center items-center font-sans" style="background-image: url('./images/bg-pattern-bottom.svg')">
+  <div class="w-full h-screen flex justify-center items-center font-sans bg-cyan-300/50" style="background-image: url('./images/bg-pattern-bottom.svg')">
     <div class="max-w-md bg-white rounded-md overflow-hidden shadow-lg mx-8 ">
       <img class="w-full h-56 object-cover " src="./images/bg-pattern-card.svg" alt="Portfolio Image">
       <div class="flex items-center justify-center">
