--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="w-full h-screen flex justify-center items-center font-sans bg-cyan-300/50" style="background-image: url('./images/bg-pattern-bottom.svg')">
-    <div class="max-w-md bg-white rounded-md overflow-hidden shadow-lg mx-8 ">
+    <div class="max-w-md bg-white rounded-xl overflow-hidden shadow-lg mx-8 ">
       <img class="w-full h-56 object-cover " src="./images/bg-pattern-card.svg" alt="Portfolio Image">
       <div class="flex items-center justify-center">
         <div class="flex items-center top-0">
@@ -20,7 +20,7 @@
       <div class="px-4 py-4 divide-y">
         <div class="flex flex-col items-center justify-center text-center mb-4 ">
           <div>
-            <h2 class="font-kumbh-sans text-lg sm:text-xl">Victor Crest <span class="font-kumbh-sans text-gray-600">26</span></h2>
+            <h2 class="font-bold text-lg sm:text-xl">Victor Crest <span class="font-kumbh-sans text-gray-600">26</span></h2>
             <p class="font-kumbh-sans text-gray-600">London</p>
           </div>
         </div>
